# sstp-client

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  sstp-client.spec
debian/: changelog  control  copyright  files  rules  sstp-client.lintian-override  substvars  watch
debian/libsstp-client-dev/DEBIAN/: control  md5sums
debian/libsstp-client-dev/usr/lib/pkgconfig/: sstp-client-1.0.pc
debian/libsstp-client0/DEBIAN/: control  md5sums  shlibs
debian/sstp-client/DEBIAN/: control  md5sums  postinst  postrm  preinst  shlibs
debian/sstp-client/usr/lib/: libsstp_api.la  libsstp_api.so.0.0.0
debian/sstp-client/usr/lib/pkgconfig/: sstp-client-1.0.pc
debian/sstp-client/usr/lib/pppd/2.4.5/: sstp-pppd-plugin.la
debian/sstp-client/usr/sbin/: sstpc
debian/tmp/usr/lib/: libsstp_api.la
debian/tmp/usr/lib/pppd/2.4.5/: sstp-pppd-plugin.la
debian/tmp/usr/sbin/: sstpc
include/: Makefile.am  Makefile.in  sstp-api.h  sstp-log.h
src/: Makefile.am  Makefile.in  sstp-buff.c  sstp-client.c  sstp-client.h  sstp-cmac.c  sstp-dump.c  sstp-event.c  sstp-event.h  sstp-http.c  sstp-option.c  sstp-option.h  sstp-packet.c  sstp-packet.h  sstp-ppp.h  sstp-pppd.c  sstp-pppd.h  sstp-private.h  sstp-state.c  sstp-state.h  sstp-stream.c  sstp-stream.h  sstp-task.c  sstp-task.h  sstp-util.c  sstp-util.h
src/libsstp-api/: Makefile.in  sstp-api.c
src/libsstp-compat/: Makefile.in
src/libsstp-log/: Makefile.in
src/pppd-plugin/: Makefile.am  Makefile.in
support/: N3ZZ-DC1-SSTP-TEST-NET.PEM  SSTP-TEST-N3ZZ-DC1-CA.PEM
